# zaza

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Dockerfile  ZAZA_ARCHITECTURE.md  com.zaza.order-sync.plist  com.zaza.ultrathink.plist  docker-compose.yml  pyproject.toml  setup-docker.sh  setup.sh
.claude/: settings.docker.json
.claude/agents/: backtesting.md  browser.md  code-reviewer.md  filings.md  options.md  sentiment.md  solutions-architect.md  tdd-engineer.md
.claude/commands/: update-submodule.md
.claude/hooks/: prompt_context.py
consumer/: Dockerfile  pyproject.toml
consumer/scripts/: generate_models.py
consumer/src/zaza_consumer/: __init__.py  __main__.py  config.py  fill_manager.py  handler.py  mcp_clients.py  models.py  oco.py  reconciler.py  stream.py
consumer/src/zaza_consumer/models/: __init__.py  order.py  transaction.py
consumer/tests/: conftest.py  test_config.py  test_fill_manager.py  test_handler.py  test_main.py  test_mcp_clients.py  test_models.py  test_oco.py  test_plan_index.py  test_reconciler.py  test_rth.py  test_schema_sync.py  test_stream.py
doc/: DOCKER-PLAN.md  TECH-STACK-RECOMMENDATION.md  subagent-validation-checklist.md
doc/code-review/: phase4-review.md  phase5-docker-review.md  phase6-subagent-delegation-review.md  yfinance-screener-review.md
doc/tasks/: TASK-001-project-scaffolding.md  TASK-002-configuration-module.md  TASK-003-file-based-cache.md  TASK-004-yfinance-client.md  TASK-005-edgar-client.md  TASK-006-mcp-server-entry-point.md  TASK-007-social-api-clients.md  TASK-008-fred-client.md  TASK-009-ta-utilities.md  TASK-010-quant-utilities.md  TASK-011-sentiment-utilities.md  TASK-012-finance-prices-company.md  TASK-013-finance-statements-ratios.md  TASK-014-finance-filings.md  TASK-015-ta-tools.md  TASK-016-options-tools.md  TASK-017-sentiment-tools.md  TASK-018-macro-tools.md  TASK-019-quant-tools.md  TASK-020-institutional-tools.md  TASK-021-earnings-tools.md  TASK-022-backtesting-tools.md  TASK-023-screener-tools.md  TASK-024-browser-tools.md  TASK-025-server-tool-registration.md  TASK-026-claude-md-instructions.md  TASK-027-setup-script.md  (+11 more)
scripts/: install_launchd.sh  migrate_trade_plans.py  order-sync-launcher.sh
tests/: conftest.py  test_cache.py  test_config.py  test_conftest_fixtures.py  test_edgar_client.py  test_migrate_trade_plans.py  test_phase2_utils.py  test_predictions_extended.py  test_server.py  test_server_integration.py  test_social_clients.py  test_trade_store.py  test_yfinance_client.py
zaza-agent/: .mcp.json  CLAUDE.md  trade-plan-schema.xml
(+163 files in other folders)
