[project]
name = "zaza"
version = "0.1.0"
description = "Financial research MCP server for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.20,<2.0",
    "yfinance>=1.0,<2.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<3.0",
    "ta>=0.11,<1.0",
    "statsmodels>=0.14,<0.16",
    "arch>=7.0,<9.0",
    "scipy>=1.11,<2.0",
    "httpx>=0.25,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<6.0",
    "praw>=7.7,<8.0",
    "playwright>=1.40,<2.0",
    "diskcache>=5.6,<6.0",
    "orjson>=3.9,<4.0",
    "structlog>=24.0,<26.0",
    "tenacity>=9.0,<10.0",
]

[project.optional-dependencies]
forecast = ["prophet>=1.1,<2.0"]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-timeout>=2.2,<3.0",
    "respx>=0.21,<1.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.7,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zaza"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
