[project]
name = "zaza-consumer"
version = "0.1.0"
description = "Trade execution consumer for automated order lifecycle management"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.20,<2.0",
    "pydantic>=2.0,<3.0",
    "redis>=5.0,<6.0",
    "orjson>=3.9,<4.0",
    "structlog>=24.0,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-timeout>=2.2,<3.0",
    "time-machine>=2.0,<3.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.7,<2.0",
    "datamodel-code-generator>=0.26,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zaza_consumer"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
